# backend-hub

./: README.md
adan-mart/user_services/: .env  README.md  pyproject.toml
adan-mart/user_services/app/: auth.py  crud.py  database.py  main.py  models.py  settings.py
adan-mart/user_services/app/router/: user.py
adan-mart/user_services/tests/: test_user.py
blog-post/: .env  README.md  pyproject.toml
blog-post/app/: database.py  main.py  settings.py
blog-post/app/crud/: post.py  user.py
blog-post/app/models/: post.py  user.py
blog-post/app/routes/: post.py  user.py
fast-api/background-task/: log.txt  main.py  pyproject.toml
fast-api/fastapi-practice/: log.txt  pyproject.toml
fast-api/fastapi-practice/src/fastapi_practice/: __init__.py  main.py
fast-api/practice-fastapi/: main.py  modles.py  pyproject.toml
hms-backend/: alembic.ini  pyproject.toml
hms-backend/app/: database.py  main.py  settings.py
hms-backend/app/models/: patient.py
hms-backend/app/repositories/: patient.py
hms-backend/app/routes/: patient.py
hms-backend/app/services/: patient.py
hms-backend/migrations/: env.py
imtiaz-mart/product-services/: main.py  pyproject.toml  user.py
imtiaz-mart/product-services/app/: main.py  settings.py
imtiaz-mart/product-services/app/config/: database.py
imtiaz-mart/product-services/app/crud/: product.py
imtiaz-mart/product-services/app/models/: product.py
imtiaz-mart/product-services/app/router/: product.py
imtiaz-mart/product-services/app/schemas/: product.py
url-shortner/: README.md  pyproject.toml
url-shortner/app/: models.py
