[tool.poetry]
name = "user-services"
version = "0.1.0"
description = ""
authors = ["wajidminhas <shanitent667@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
sqlmodel = "^0.0.24"
uvicorn = "^0.34.2"
psycopg = "^3.2.7"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-multipart = "^0.0.20"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"


[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
